--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <embed
       src="IlyaAlekseevResume.pdf"
       type="application/pdf"
-      width="100%"
+      width="1920px"
       height="1080px"
     />
   </body>
