--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <embed
       src="IlyaAlekseevResume.pdf"
       type="application/pdf"
-      width="800px"
-      height="2100px"
+      width="100vh"
+      height="100vh"
     />
   </body>
 </html>
