--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <embed
       src="IlyaAlekseevResume.pdf"
       type="application/pdf"
-      width="100vh"
+      width="100vw"
       height="100vh"
     />
   </body>
