--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <embed
       src="IlyaAlekseevResume.pdf"
       type="application/pdf"
-      width="100vw"
-      height="100vh"
-    />
+       frameBorder="0"
+    scrolling="auto"
+    height="100%"
+    width="100%"
+    ></embed>
   </body>
 </html>
